--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body {
     padding: 0;
     font-family: Arial, sans-serif;
     background: 
-    linear-gradient(to bottom right, #a99488,  #b7a499, #a99488),
+    linear-gradient(to bottom right, #242221,  #413e3d, #242221),
     repeating-radial-gradient(circle at 0 0, transparent 0, transparent 15px, rgba(0,0,0,0.1) 30px);
     background-size: 100% 100%, 75px 50px;  
    
@@ -31,10 +31,11 @@ body {
     }
 
     .nav-logo img{
-      margin-left: 5px;
-      margin-right: 10px;
+      margin-left: 50px;
+      margin-right: 1px;
+      margin-top: 15px;
       padding-bottom: 5px;
-      width: 110px;
+      width: 100px;
       height: 110px;
       border-radius: 50%;
       justify-content:right;
@@ -42,14 +43,15 @@ body {
 
     } 
     .navbar h2{
-      margin-left: 5px;
+      margin-left: 0%;
       margin-right: 10px;
       padding-top: 28px;
+      margin-top: 10px;
       align-items: center;
       font-family: "Sumana", serif;
-      font-weight: 400;
+      font-weight: 420;
       font-style: normal;
-      color: #4d3f38;
+      color: #b0aba0;
     }
 
 
@@ -61,9 +63,9 @@ body {
     }
 
     .nav-item .btn{
-      color: #584a42;
+      color:#b0aba0;
       padding:8px;
-      border-radius: 100px;
+      border-radius: 0px;
       cursor: pointer;
       font-family: Arial, sans-serif;
       font-size: 20px;
@@ -71,16 +73,18 @@ body {
       margin-top: 15px;
       margin-right: 15px;
     }
-    .nav-item .btn:hover{
-      background-color: #b29a8c;
+   .btn:hover{
+      border-bottom-color: #e8d5ae;
     }
     #contact {
-    background-color:#9e8678 ;
-    color:#d1c4bd;
+    background-color:#413e3d ;
+    border-radius: 100px;
+    color:#ecd4a5;
     }
 
     #contact:hover{
-      background-color: #5e4c42 ;
+      background-color: #201c1b ;
+       border-bottom-color: #201c1b;
     }
     /* Informacion principal */
 
@@ -88,7 +92,7 @@ body {
       padding: 10px;
       padding-bottom: 0px;
       text-align: center;
-      height: 611px;
+      height: 630px;
       
     }
     
@@ -99,12 +103,14 @@ body {
       font-family: "Sumana", serif;
       font-weight: 400;
       font-style: normal;
-      color: #4d3f38;
-      font-size: 80px;
+      color: #b0aba0;
+      font-size: 90px;
+      margin-top: 180px;
+      margin-bottom: 35px;
     }
     .section1 h2{
       font-size: 1.2rem;
-      color: #615151;
+      color: #b0aba0;
       margin-top: 20px;
       width: 50%;
       margin: 0 auto;
@@ -119,12 +125,12 @@ body {
 
 footer {
   min-height: 300px;
-  background-color: #968074;
+  background-color: #242322;
 }
 
 .footer-logo {
   height: 130px;
-  width: 130px;
+  width: 120px;
   margin: 10px;
 }
 
@@ -132,6 +138,7 @@ footer {
   font-size: 1.3rem;
   padding: 20px;
   margin-bottom: 30px;
+  color:#a09c93;
   font-family: Arial, sans-serif;
 }
 
@@ -143,28 +150,28 @@ footer {
   justify-content: center;
   padding: 2px;
   margin: 10px;
-  border: 2px solid #c5b4aa;
+  border: 2px solid #a09c93;
   border-radius: 50%;
   transition: all 0.2s ease-in;
 }
 
 .iconos-redes-sociales i {
-  color: #c5b4aa;
+  color: #a09c93;
   font-size: 1.5rem;
   transition: all 0.2s ease-in;
 }
 
 .iconos-redes-sociales a:hover {
-  background-color: #c5b4aa;
-  border: 2px solid #ad9984;
+  background-color: #a09c93;
+  border: 2px solid #78756f;
 }
 
 .iconos-redes-sociales a:hover i {
-  color:#4d3f38;
+  color:#242322;
 }
 
 .derechos-de-autor {
   font-size: 15px;
-  color: #aeaeae;
+  color: #b0aba0;
   padding: 20px;
 }
